--- a/Tp-Foyer/pom.xml
+++ b/Tp-Foyer/pom.xml
@@ -146,5 +146,10 @@
             <name>Nexus Repository</name>
             <url>http://192.168.1.19:8081/repository/maven-releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>Snapshot</name>
+            <url>http://192.168.1.19:8081/repository/maven-snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 </project>
