--- a/Tp-Foyer/src/main/resources/application.properties
+++ b/Tp-Foyer/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #Server configuration
 server.servlet.context-path=/tpFoyer17
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 server.port=8082
 
 ### DATABASE ###
@@ -10,4 +12,10 @@ spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+#logging configuration
+logging.level.com.zaxxer.hikari=INFO
+logging.level.org.springframework=INFO 
+logging.level.root=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{60} - %msg%n
