--- a/Tp-Foyer/src/main/resources/application.properties
+++ b/Tp-Foyer/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Server configuration
-server.servlet.context-path=/tpFoyer17
+server.servlet.context-path=/tpFoyer
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8082
